--- a/index.html
+++ b/index.html
@@ -23,27 +23,35 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
-        /* Gradient mapping from specifications */
         .header-gradient {
             background: linear-gradient(to right, #9B4A4E, #7C4A50);
         }
         .icon-blue-gradient {
             background: linear-gradient(to bottom, #1F6AE1, #0B4DB8);
         }
+        /* Blur effect for modal background */
+        .modal-open-blur {
+            filter: blur(8px);
+            transition: filter 0.3s ease;
+        }
     </style>
 <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.4",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.4/client",
     "react/": "https://esm.sh/react@^19.2.4/",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0"
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <!-- الربط الأساسي لتشغيل التطبيق -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
