--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         .icon-blue-gradient {
             background: linear-gradient(to bottom, #1F6AE1, #0B4DB8);
         }
-        /* Reduced blur effect as requested (from 8px to 3px) */
+        /* Further reduced blur effect (1px) as requested */
         .modal-open-blur {
-            filter: blur(3px);
+            filter: blur(1px);
             transition: filter 0.3s ease;
         }
     </style>
